# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2024 UxuginPython
[package]
name = "rrtk_stream_builder"
version = "0.1.1"
license = "BSD-3-Clause"
edition = "2021"
authors = ["UxuginPython <uxugin at uxugin dot com>"]
repository = "https://github.com/UxuginPython/rrtk_stream_builder"
description = "RRTK Stream Builder"
keywords = ["robotics", "nodes", "rrtk"]
categories = ["science::robotics", "development-tools"]

[dependencies]
cairodrag = "0.1.1"
gtk4 = "0.9.4"
