# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2024-2025 UxuginPython
[package]
name = "rrtk_stream_builder"
version = "0.2.0"
license = "BSD-3-Clause"
edition = "2021"
authors = ["UxuginPython <uxugin at uxugin dot com>"]
repository = "https://github.com/UxuginPython/rrtk_stream_builder"
description = "RRTK Stream Builder"
keywords = ["robotics", "nodes", "rrtk"]
categories = ["science::robotics", "development-tools"]

[dependencies]
cairodrag = "0.2.0"
gtk4 = { version = "0.9.4", features = ["v4_10"] }
rrtk_rsb = "1.0.0-alpha.2"
